Switch to PyMySQL and enable MySQL on py34
Change-Id: I1f681df9a4191131d1fa5aaaba9d2ccf07eeab2b

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,7 @@ gnocchi.storage =
 gnocchi.indexer =
     null = gnocchi.indexer.null:NullIndexer
     mysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
+    mysql+pymysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
     postgresql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
 
 gnocchi.aggregates =
