--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
 [testenv:py34]
 deps = -r{toxinidir}/requirements-py3.txt
        -r{toxinidir}/test-requirements-py3.txt
-commands = {toxinidir}/run-tests.sh postgresql "file swift ceph" {posargs}
+commands = {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
 
 [testenv:py27-postgresql-file]
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
@@ -81,6 +81,27 @@ deps = -r{toxinidir}/requirements-py3.txt
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
 basepython = python3.4
 commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py34-mysql-file]
+deps = -r{toxinidir}/requirements-py3.txt
+       -r{toxinidir}/test-requirements-py3.txt
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
+basepython = python3.4
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py34-mysql-swift]
+deps = -r{toxinidir}/requirements-py3.txt
+       -r{toxinidir}/test-requirements-py3.txt
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
+basepython = python3.4
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py34-mysql-ceph]
+deps = -r{toxinidir}/requirements-py3.txt
+       -r{toxinidir}/test-requirements-py3.txt
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
+basepython = python3.4
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
