Move SQL backends to requirements
New version of SQLAlchemy-utils require that we do install all the
backends we support otherwise it fails at runtime.

Change-Id: I8767fdf26f6278eb2f1ef4a483e8dcae7be43a2b

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
   {toxinidir}/generate-config-file.sh
 
 [testenv:py34]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements-py3.txt
        -r{toxinidir}/test-requirements-py3.txt
 commands = {toxinidir}/run-tests.sh postgresql "file swift ceph" {posargs}
 
@@ -42,7 +42,7 @@ basepython = python2.7
 commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py34-postgresql-file]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements-py3.txt
        -r{toxinidir}/test-requirements-py3.txt
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
 basepython = python3.4
@@ -59,7 +59,7 @@ basepython = python2.7
 commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py34-postgresql-swift]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements-py3.txt
        -r{toxinidir}/test-requirements-py3.txt
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
 basepython = python3.4
@@ -76,7 +76,7 @@ basepython = python2.7
 commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py34-postgresql-ceph]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements-py3.txt
        -r{toxinidir}/test-requirements-py3.txt
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
 basepython = python3.4
