--- a/requirements-py3.txt
+++ b/requirements-py3.txt
@@ -3,7 +3,7 @@ oslo.config<1.10.0,>=1.9.3
 oslo.db>=1.8.0
 oslo.log<1.1.0,>=1.0.0
 oslo.policy>=0.3.0
-oslo.serialization<1.5.0,>=1.4.0
+oslo.serialization>=1.4.0
 oslo.utils<1.5.0,>=1.4.0
 oslosphinx>=2.2.0  # Apache-2.0
 pandas
