--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ oslo.serialization<1.5.0,>=1.4.0
 oslo.utils<1.5.0,>=1.4.0
 oslosphinx>=2.2.0  # Apache-2.0
 pandas
-pecan!=0.8
+pecan>=0.9
 python-swiftclient
 pytimeparse
 # pytimeparse misses this dep for now
