Remove pypy tox target
pypy+gnocchi is a non-starter because no numpy for pypy. Having this
present as a default tox target causes noisy errors on a machine
where pypy is installed, so for sake of cleanliness it's now gone.

Change-Id: I05aea72721d03255e0f224ec5b910a26a287eb5b

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-postgresql-file,py27,py34,pypy,pep8,bashate
+envlist = py27-postgresql-file,py27,py34,pep8,bashate
 
 [testenv]
 usedevelop = True
