--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,7 @@ console_scripts =
     gnocchi-api = gnocchi.cli:api
     gnocchi-dbsync = gnocchi.cli:storage_dbsync
     gnocchi-statsd = gnocchi.cli:statsd
+    gnocchi-metricd = gnocchi.cli:metricd
     carbonara-create = gnocchi.carbonara:create_archive_file
     carbonara-dump = gnocchi.carbonara:dump_archive_file
     carbonara-update = gnocchi.carbonara:update_archive_file
