Ensure live gabbi tests run in gate
With tox 2.0 the environment is restricted. The gabbi live tests
will not run without GNOCCHI_SERVICE_HOST being in the environment.
This change ensures that GNOCCHI_SERVICE* is passed into the test
run.

Change-Id: Ic68a09f12f2eadf07c7cdb5c28714d3b2768acb3

--- a/tox.ini
+++ b/tox.ini
@@ -105,6 +105,7 @@ commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{po
 
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
+passenv = LANG GNOCCHI_SERVICE*
 sitepackages = True
 basepython = python2.7
 commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
