Allow gnocchi API at /metric
One of the devstack goals is to get all the services running at
endpoints that are under the same host and port, for example:

   http://api.example.com/metric
   http://api.example.com/telemetry
   http://api.example.com/identity

This changeset enables that.

GNOCCHI_SERVICE_PREFIX defaults to /metric

The service will by default run on port 80 at /metric/v1/...

If GNOCCHI_SERVICE_PORT is defined (undefined by default) the server
will run without a prefix, on the stated port.

The gabbi-based live test will use the server addressed by
GNOCCHI_SERVICE_URL. If that is not set, the live test won't run.

There's additional work to do here to get things fully aligned with
the goals but this gets things moving in the right direction. One of
the next steps is for the wsgi script to not require explicit
installation from the devstack plugin. Ideally the pip install
process would accomplish this.

Change-Id: Iec2924b5460afe2ebeafab7c82eb4ddf184f2c99

--- a/devstack/apache-gnocchi.template
+++ b/devstack/apache-gnocchi.template
@@ -1,16 +1,10 @@
-Listen %GNOCCHI_PORT%
 
-<VirtualHost *:%GNOCCHI_PORT%>
-    WSGIDaemonProcess gnocchi lang='en_US.UTF-8' locale='en_US.UTF-8' user=%USER% display-name=%{GROUP} processes=2 threads=10 %VIRTUALENV%
+WSGIDaemonProcess gnocchi lang='en_US.UTF-8' locale='en_US.UTF-8' user=%USER% display-name=%{GROUP} processes=2 threads=10 %VIRTUALENV%
+WSGIProcessGroup gnocchi
+WSGIScriptAlias %SCRIPT_NAME% %WSGI%
+<Location %SCRIPT_NAME%>
     WSGIProcessGroup gnocchi
-    WSGIScriptAlias / %WSGI%
     WSGIApplicationGroup %{GLOBAL}
-    <IfVersion >= 2.4>
-        ErrorLogFormat "%{cu}t %M"
-    </IfVersion>
-    ErrorLog /var/log/%APACHE_NAME%/gnocchi.log
-    CustomLog /var/log/%APACHE_NAME%/gnocchi-access.log combined
-
-</VirtualHost>
+</Location>
 
 WSGISocketPrefix /var/run/%APACHE_NAME%
