doc: improve the layout and gnocchi.xyz
This improves the doc layout a bit and adds support for a different theme
that'll be used on http://gnocchi.xyz

Change-Id: I32e627bc1f9ff6561e6498faa7c70f5797968ecf
Signed-off-by: Julien Danjou <julien@danjou.info>

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ pymysql
 # oslo config object, but once 2.2 will be released,
 # we can moved back this to test-requirements.txt
 keystonemiddleware>=1.5.0
+sphinx_bootstrap_theme
