--- a/tox.ini
+++ b/tox.ini
@@ -64,3 +64,7 @@ commands = {toxinidir}/generate-config-file.sh
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
            {toxinidir}/setup-postgresql-tests.sh python setup.py build_sphinx
+
+[testenv:docs-gnocchi.xyz]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
+commands = {toxinidir}/setup-postgresql-tests.sh sphinx-build -D html_theme=bootstrap doc/source doc/build
