--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,7 @@ oslosphinx>=2.2.0  # Apache-2.0
 pandas
 pecan>=0.9
 python-swiftclient
-pytimeparse
-# pytimeparse misses this dep for now
-future
+pytimeparse>=1.1.5
 futures
 requests
 six
