rest: returns 404 when controller does not exists
Since version 0.9.0, pecan returns 405 when no
method or routing object are found into a rest.Controller.

This change removes inheritance of pecan.rest.Controller
when the class is just a routing controller to lets pecan
returning the correct status code.

It also changes the lookup method for the ResourcesController and
SearchResourceController to appropriatly returns 404 when the
resource_type does not exists.

Closes bug: #1463102

Change-Id: I4661baed4fbf58b3c1a00cf6a292b95122321693

--- a/gnocchi/tests/gabbi/gabbits/resource.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource.yaml
@@ -49,6 +49,14 @@ tests:
       response_json_paths:
           $.volume: $SCHEME://$NETLOC/v1/resource/volume
 
+    - name: typo of resource
+      url: /v1/resoue
+      status: 404
+
+    - name: typo of resource extra
+      url: /v1/resource/foobar
+      status: 404
+
 # Explore that GETting a list of resources demonstrates the expected
 # behaviors notably with regard to content negotiation.
 
