--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,6 @@ classifier =
     Programming Language :: Python :: 3.4
     Topic :: System :: Monitoring
 
-data_files =
-    etc/ceilometer = etc/ceilometer/*
-
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
@@ -33,15 +30,15 @@ packages =
 [entry_points]
 gnocchi.indexer.resources =
     generic = gnocchi.indexer.sqlalchemy_base:Resource
-    instance = gnocchi.ceilometer.resources.instance:InstanceSQLAlchemy
+    instance = gnocchi.indexer.sqlalchemy_extension:Instance
     swift_account = gnocchi.indexer.sqlalchemy_base:ResourceExt
-    volume = gnocchi.ceilometer.resources.volume:VolumeSQLAlchemy
+    volume = gnocchi.indexer.sqlalchemy_extension:Volume
     ceph_account = gnocchi.indexer.sqlalchemy_base:ResourceExt
     network = gnocchi.indexer.sqlalchemy_base:ResourceExt
     identity = gnocchi.indexer.sqlalchemy_base:ResourceExt
     ipmi = gnocchi.indexer.sqlalchemy_base:ResourceExt
     stack = gnocchi.indexer.sqlalchemy_base:ResourceExt
-    image = gnocchi.ceilometer.resources.image:ImageSQLAlchemy
+    image = gnocchi.indexer.sqlalchemy_extension:Image
 
 gnocchi.controller.resources =
     generic = gnocchi.rest:GenericResourcesController
@@ -81,20 +78,6 @@ console_scripts =
 
 oslo.config.opts =
     gnocchi = gnocchi.opts:list_opts
-
-ceilometer.dispatcher =
-    gnocchi = gnocchi.ceilometer.dispatcher:GnocchiDispatcher
-
-gnocchi.ceilometer.resource =
-    instance = gnocchi.ceilometer.resources.instance:Instance
-    swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccount
-    volume = gnocchi.ceilometer.resources.volume:Volume
-    ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccount
-    network = gnocchi.ceilometer.resources.network:Network
-    identity = gnocchi.ceilometer.resources.identity:Identity
-    ipmi = gnocchi.ceilometer.resources.ipmi:IPMI
-    stack = gnocchi.ceilometer.resources.orchestration:Stack
-    image = gnocchi.ceilometer.resources.image:Image
 
 [build_sphinx]
 all_files = 1
