gate: fixup gabbi live tests
The gabbi live tests was ignored during the gate run.

Due to "openstack endpoint list" that returns a empty list:

  https://bugs.launchpad.net/keystone/+bug/1470635

And because the token wasn't passed to gabbit tests.

This change fixes that.

It also ensures that the gabbi live test fail
if service url is not present.

Change-Id: I8e92ac26248b546049a5d7cfea90c861f30e53c8

--- a/gnocchi/tests/gabbi/gabbits-live/live.yaml
+++ b/gnocchi/tests/gabbi/gabbits-live/live.yaml
@@ -3,6 +3,10 @@
 #
 # These act as a very basic sanity check.
 
+defaults:
+    request_headers:
+        x-auth-token: $ENVIRON['GNOCCHI_SERVICE_TOKEN']
+
 tests:
 
     - name: check /
@@ -45,3 +49,8 @@ tests:
       url:  $LOCATION
       response_json_paths:
           $.name: ✔éñ☃
+
+    - name: delete unicode archive policy
+      url: /v1/archive_policy/%E2%9C%94%C3%A9%C3%B1%E2%98%83
+      method: DELETE
+      status: 204
