--- a/tox.ini
+++ b/tox.ini
@@ -91,6 +91,7 @@ commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{po
 
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
+         GABBI_LIVE_FAIL_IF_NO_TEST=1
 passenv = LANG GNOCCHI_SERVICE*
 sitepackages = True
 basepython = python2.7
