--- a/gnocchi/tests/gabbi/gabbits/resource.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource.yaml
@@ -203,6 +203,22 @@ tests:
       response_json_paths:
           host: compute2
 
+    - name: patch instance resource with same data
+      desc: Ensure no useless revision have been created
+      url: /v1/resource/instance/75C44741-CC60-4033-804E-2D3098C7D2E9
+      method: patch
+      request_headers:
+          x-user-id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
+          x-project-id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
+          content-type: application/json
+      data:
+          host: compute2
+      status: 200
+      response_json_paths:
+          host: compute2
+          revision_start: $RESPONSE['$.revision_start']
+
+
     - name: patch instance with metrics
       url: /v1/resource/instance/75C44741-CC60-4033-804E-2D3098C7D2E9
       method: patch
