indexer: always eagerly load archive_policy
There's actually almost no use cases where we don't need the
archive_policy details on a Metric object. This changes the indexer code
so that the archive_policy details are always available.

Change-Id: Ifd8a43459f4e84f88f14cfb4e101b45c1ce64b09

--- a/gnocchi/tests/gabbi/gabbits/base.yaml
+++ b/gnocchi/tests/gabbi/gabbits/base.yaml
@@ -78,7 +78,7 @@ tests:
   url: /v1/metric
   status: 200
   response_json_paths:
-      $[0].archive_policy_name: test1
+      $[0].archive_policy.name: test1
 
 - name: post a single measure
   desc: post one measure
