rest: fix archive policy controller
Since version 0.9, pecan handles 405 error correctly.

This change split the ArchivePoliciesController in two parts.
One for /archive_policy and another for /archive_policy/<name>.

So pecan correctly understands what is the resource and the resource
root and raises the appropriate error for missing method.

Change-Id: Ia592f5bda7add2c48c7a3c4415dd02f2afeb8f14
Closes-bug: #1334690

--- a/gnocchi/tests/gabbi/gabbits/archive.yaml
+++ b/gnocchi/tests/gabbi/gabbits/archive.yaml
@@ -192,11 +192,9 @@ tests:
 # Unexpected methods
 
     - name: post single archive
-      desc: https://bugs.launchpad.net/pecan/+bug/1334690
-      xfail: true
       url: /v1/archive_policy/medium
       method: POST
-      status: 405 # currently 404
+      status: 405
 
     - name: put single archive
       url: /v1/archive_policy/medium
