rest: remove convert_metric()
This function logic is now moved inside the indexer itself, so it can
create the resource and metric in only one pass and one transaction that
can be easily rolled-back on errors.

Change-Id: I0b57adf44246bb8e84ff0e567a30667fae75f3f6
Closes-Bug: #1483634

--- a/gnocchi/tests/gabbi/gabbits/resource.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource.yaml
@@ -263,7 +263,7 @@ tests:
                   archive_policy_name: noexist
       status: 400
       response_strings:
-          - Unknown archive policy noexist
+          - Archive policy noexist does not exist
 
     - name: get patched resource
       desc: confirm the patched resource is properly patched
@@ -603,10 +603,10 @@ tests:
           content-type: application/json
       status: 400
       data:
-          electron.spin:
+          electron.charge:
               archive_policy_name: high
       response_strings:
-          - Unknown archive policy high
+          - Archive policy high does not exist
 
 # Check bad timestamps
 
