archive policy rule: make them available on all metric creations
Currently the archive policy rules are only applied when creating metric
in certain manners. This patches change that so that anyway you create
the metric, the archive policy rules are applied.

It also optimizes the metric creation process to avoid an archive policy
lookup on metric creation.

Change-Id: I391818b47956796dd01a1b3df28fb60a6bc7844c

--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -70,7 +70,7 @@ tests:
           archive_policy_name: bad-cookie
       status: 400
       response_strings:
-          - Unknown archive policy bad-cookie
+          - Archive policy bad-cookie does not exist
 
     - name: create metric bad content-type
       url: /v1/metric
