rest: implements /resource/generic/UUID/history
This change allows to get the history of one resource via the
/resource/generic/UUID/history instead of doing a search in the whole
resources list.

Change-Id: Ia282b5026c4d4211bf5e4dcc252c31bf734b0fe6
Closes-bug: #1479819

--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -266,6 +266,9 @@
 
     {"host": "compute2"}
 
+- name: get-patched-instance-history
+  request: GET /v1/resource/instance/{{ scenarios['create-resource-instance']['response'].json['id'] }}/history HTTP/1.1
+
 - name: get-patched-instance
   request: GET /v1/resource/instance/{{ scenarios['create-resource-instance']['response'].json['id'] }} HTTP/1.1
 
